dnl Process this file with autoconf to produce a configure script.
dnl $Id$

AC_PREREQ([2.68])
AC_INIT(monolith, 2.0)

AC_CONFIG_SRCDIR(src/main.c)
AC_CONFIG_AUX_DIR(auto)

AM_INIT_AUTOMAKE

AC_DEFINE(PACKAGE, "monolith")
AC_DEFINE(VERSION, 1.0)

AM_CONFIG_HEADER(include/config.h:include/config.h.in)
AC_PREFIX_DEFAULT(/usr/local/bbs)

AC_ARG_WITH(name,AC_HELP_STRING([--with-name=NAME],[set the BBS name [default=Monolith]]),,with_name=Monolith)

AC_ARG_WITH(mysql, [  --with-mysql[=DIR]      use mysql database system  [default=yes]
                          This option requires mysql to be installed.

    When --with-mysql is specified, you may also specify the following MySQL
    options, which the BBS will use to connect to the MySQL Server:],,with_mysql=yes)

AC_ARG_WITH(sql_host,AC_HELP_STRING([--with-sql_host=HOST],[Connect to this MySQL Server (default=localhost)]),,with_sql_host=localhost)
AC_ARG_WITH(sql_user,AC_HELP_STRING([--with-sql_user=USER],[Connect using this MySQL username (default=bbs)]),,with_sql_user=bbs)
AC_ARG_WITH(sql_pass,AC_HELP_STRING([--with-sql_pass=PASS],[Connect using this MySQL password (default=bing)]),,with_sql_pass=bing)
AC_ARG_WITH(sql_db,AC_HELP_STRING([--with-sql_db=DB],[Use this MySQL database (default=bbs)]),,with_sql_db=bbs)
AC_ARG_WITH(sql_sock,AC_HELP_STRING([--with-sql_sock=SOCK],[Connect via this socket (default=/var/run/mysqld/mysqld.sock)]),,with_sql_sock=/var/run/mysqld/mysqld.sock)

AC_ARG_WITH(rating,AC_HELP_STRING([--with-rating],[use message rating system (default=no)]),,with_rating=no)

AC_ARG_ENABLE(hero,AC_HELP_STRING([--disable-hero],[include superhero toy (default=yes)]),,with_hero=yes)

AC_ARG_WITH(overview,AC_HELP_STRING([--with-overview],[give overview after configuring (default=no)]),,with_overview=no)

if test "x$with_rating" != "xyes"; then
  with_rating=no
fi
if test "x$with_hero" != "xyes"; then
  with_hero=no
fi
if test "x$with_overview" != "xyes"; then
  with_overview=no
fi

umask 002

AC_SUBST(prefix)

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PATH_PROG(SENDMAIL, sendmail, /usr/lib/sendmail, $PATH /usr/bin /usr/sbin /usr/etc /etc /usr/ucblib)
if test -n "$SENDMAIL"; then
  AC_DEFINE(HAVE_SENDMAIL, [], [Send mail])
fi
AC_SUBST(SENDMAIL)

dnl GNU gettext add-ons
AM_GNU_GETTEXT([external])

dnl Checks for libraries.
AC_CHECK_LIB(crypt, crypt)
AC_CHECK_LIB(nsl, inet_ntoa)
AC_CHECK_LIB(socket, getpeername)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([arpa/inet.h fcntl.h libintl.h locale.h netdb.h netinet/in.h stdlib.h string.h strings.h sys/file.h sys/ioctl.h sys/socket.h sys/time.h termio.h termios.h unistd.h utmp.h])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_HEADER_TIME
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MKTIME
AC_FUNC_MMAP
AC_FUNC_REALLOC
AC_CHECK_FUNCS([alarm atexit bzero gethostbyaddr gethostname gettimeofday inet_ntoa memset mkdir munmap regcomp setenv setlocale sqrt strcasecmp strchr strcspn strdup strerror strncasecmp strpbrk strrchr strspn strstr sysinfo tzset uname])

dnl make sure a BBS name was specified.
dnl
echo -n "checking for BBS name..."
if test "x$with_name" = "xnone"; then
    echo
    echo " no name"
    echo
    echo "You MUST specify a name for your BBS. Use the --with-name=NAME option"
    echo "to specify it. For instance: --with-name=Monolith would cause your BBS"
    echo "to be called 'Monolith BBS'. (We'd prefer if you chose something else)"
    echo
    exit 0
else
    echo " $with_name BBS"
    BBSNAME="$with_name"
    AC_SUBST(BBSNAME)
fi

dnl Do a bit of mysql checking.
if test ! x${with_mysql} = x && test -d "${with_mysql}"; then
    echo "checking MySQL installation in ${with_mysql}..."
    mysql_dir=${with_mysql}
    echo -n "checking headers..."
    if test -d "${with_mysql}/include"; then
        MYSQL_INCLUDE="-I${with_mysql}/include"
        echo " ok"
    else
        echo " uh-oh"
    fi
    echo -n "checking libraries..."
    if test -d "${with_mysql}/lib"; then
        if test -d "${with_mysql}/lib/mysql"; then
            MYSQL_LIB="-L${with_mysql}/lib/mysql"
        else
            MYSQL_LIB="-L${with_mysql}/lib"
        fi
        echo " ok"
    else
        echo " uh-oh"
    fi
    echo -n "checking binaries..."
    if test -d "${with_mysql}/bin"; then
        MYSQL_BIN="${with_mysql}/bin"
        echo " ok"
    else
        echo " uh-oh"
    fi
    if test -f "${mysql_dir}/include/mysql.h"; then
        MYSQL_HEADER="<mysql.h>"
        AC_SUBST(MYSQL_HEADER)
        AC_DEFINE(USE_MYSQL, [], [My SQL, Your SQL])
        AC_SUBST(MYSQL_INCLUDE)
        AC_SUBST(MYSQL_LIB)
        AC_SUBST(MYSQL_BIN)
        mysql_app=${MYSQL_BIN}/mysql
        FOUND_MYSQL=yes
    else
        if test -f "${mysql_dir}/include/mysql/mysql.h"; then
            MYSQL_HEADER="<mysql/mysql.h>"
            AC_SUBST(MYSQL_HEADER)
            AC_DEFINE(USE_MYSQL)
            AC_SUBST(MYSQL_INCLUDE)
            AC_SUBST(MYSQL_LIB)
            AC_SUBST(MYSQL_BIN)
            mysql_app=${MYSQL_BIN}/mysql
            FOUND_MYSQL=yes
        fi
    fi
    if ! test x${FOUND_MYSQL} = "xyes"; then
        echo
        echo "ARGH: Unable to locate mysql! Take cover! Self destructing in 3 seconds!"
        echo
        echo "Please install the MySQL database system, which is available for free from"
        echo "http://www.mysql.org/ and run this program again. If you do have MySQL in-"
        echo "stalled, use the option --with-mysql=DIR so that $0 can find it."
        echo
        exit 1
    fi
else
    dnl Look for global mysql installation.
    dnl
    AC_CHECK_HEADERS(mysql.h)
    if test "x$ac_cv_header_mysql_h" = "xno" ; then
        AC_CHECK_HEADERS(mysql/mysql.h)
        if test "x$ac_cv_header_mysql_mysql_h" = "xno" ; then

dnl No MySQL specified and not found in standard locations, nearly time to argh.
dnl
            echo
            echo "  Could not find MySQL and no directory was specified. I'm going to"
            echo "  have a little look around your system and check a few standard"
            echo "  locations, before I start running around in a panicking frenzy."
            echo
dnl ##
dnl ##
            if test ! x${with_mysql} = x; then
                if test -d "/opt/mysql"; then
                    echo "Found directory /opt/mysql"
                    echo "checking MySQL installation..."
                    mysql_dir=/opt/mysql
                    echo -n "checking headers..."
                    if test -d "${mysql_dir}/include"; then
                        MYSQL_INCLUDE="-I${mysql_dir}/include"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    echo -n "checking libraries..."
                    if test -d "${mysql_dir}/lib"; then
                        if test -d "${mysql_dir}/lib/mysql"; then
                            MYSQL_LIB="-L${mysql_dir}/lib/mysql"
                        else
                            MYSQL_LIB="-L${mysql_dir}/lib"
                        fi
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    echo -n "checking binaries..."
                    if test -d "${mysql_dir}/bin"; then
                        MYSQL_BIN="${mysql_dir}/bin"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    if test -f "${mysql_dir}/include/mysql.h"; then
                        MYSQL_HEADER="<mysql.h>"
                        AC_SUBST(MYSQL_HEADER)
                        AC_DEFINE(USE_MYSQL)
                        AC_SUBST(MYSQL_INCLUDE)
                        AC_SUBST(MYSQL_LIB)
                        AC_SUBST(MYSQL_BIN)
                        mysql_app=${MYSQL_BIN}/mysql
                        FOUND_MYSQL=yes
                    else
                        if test -f "${mysql_dir}/include/mysql/mysql.h"; then
                            MYSQL_HEADER="<mysql.h>"
                            AC_SUBST(MYSQL_HEADER)
                            AC_DEFINE(USE_MYSQL)
                            AC_SUBST(MYSQL_INCLUDE)
                            AC_SUBST(MYSQL_LIB)
                            AC_SUBST(MYSQL_BIN)
                            mysql_app=${MYSQL_BIN}/mysql
                            FOUND_MYSQL=yes
                        fi
                    fi
                else
                    if ! test x${FOUND_MYSQL} = "xyes"; then
                        echo "no joy in /opt/mysql..."
                    fi
                fi
                if test -d "/usr/mysql"; then
                    echo "Found directory /usr/mysql"
                    echo "checking MySQL installation..."
                    mysql_dir=/usr/mysql
                    echo -n "checking headers..."
                    if test -d "${mysql_dir}/include"; then
                        MYSQL_INCLUDE="-I${mysql_dir}/include"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    echo -n "checking libraries..."
                    if test -d "${mysql_dir}/lib"; then
                        if test -d "${mysql_dir}/lib/mysql"; then
                            MYSQL_LIB="-L${mysql_dir}/lib/mysql"
                        else
                            MYSQL_LIB="-L${mysql_dir}/lib"
                        fi
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    echo -n "checking binaries..."
                    if test -d "${mysql_dir}/bin"; then
                        MYSQL_BIN="${mysql_dir}/bin"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    if test -f "${mysql_dir}/include/mysql.h"; then
                        MYSQL_HEADER="<mysql.h>"
                        AC_SUBST(MYSQL_HEADER)
                        AC_DEFINE(USE_MYSQL)
                        AC_SUBST(MYSQL_INCLUDE)
                        AC_SUBST(MYSQL_LIB)
                        AC_SUBST(MYSQL_BIN)
                        mysql_app=${MYSQL_BIN}/mysql
                        FOUND_MYSQL=yes
                    else
                        if test -f "${mysql_dir}/include/mysql/mysql.h"; then
                            MYSQL_HEADER="<mysql/mysql.h>"
                            AC_SUBST(MYSQL_HEADER)
                            AC_DEFINE(USE_MYSQL)
                            AC_SUBST(MYSQL_INCLUDE)
                            AC_SUBST(MYSQL_LIB)
                            AC_SUBST(MYSQL_BIN)
                            mysql_app=${MYSQL_BIN}/mysql
                            FOUND_MYSQL=yes
                        fi
                    fi
                else
                    if ! test x${FOUND_MYSQL} = "xyes"; then
                        echo "no joy in /usr/mysql..."
                    fi
                fi
                if test -d "/usr/local/mysql"; then
                    echo "Found directory /usr/local/mysql"
                    echo "checking MySQL installation..."
                    mysql_dir=/usr/local/mysql
                    echo -n "checking headers..."
                    if test -d "${mysql_dir}/include"; then
                        MYSQL_INCLUDE="-I${mysql_dir}/include"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    echo -n "checking libraries..."
                    if test -d "${mysql_dir}/lib"; then
                        if test -d "${mysql_dir}/lib/mysql"; then
                            MYSQL_LIB="-L${mysql_dir}/lib/mysql"
                        else
                            MYSQL_LIB="-L${mysql_dir}/lib"
                        fi
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    echo -n "checking binaries..."
                    if test -d "${mysql_dir}/bin"; then
                        MYSQL_BIN="${mysql_dir}/bin"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    if test -f "${mysql_dir}/include/mysql.h"; then
                        MYSQL_HEADER="<mysql.h>"
                        AC_SUBST(MYSQL_HEADER)
                        AC_DEFINE(USE_MYSQL)
                        AC_SUBST(MYSQL_INCLUDE)
                        AC_SUBST(MYSQL_LIB)
                        AC_SUBST(MYSQL_BIN)
                        mysql_app=${MYSQL_BIN}/mysql
                        FOUND_MYSQL=yes
                    else
                        if test -f "${mysql_dir}/include/mysql/mysql.h"; then
                            MYSQL_HEADER="<mysql/mysql.h>"
                            AC_SUBST(MYSQL_HEADER)
                            AC_DEFINE(USE_MYSQL)
                            AC_SUBST(MYSQL_INCLUDE)
                            AC_SUBST(MYSQL_LIB)
                            AC_SUBST(MYSQL_BIN)
                            mysql_app=${MYSQL_BIN}/mysql
                            FOUND_MYSQL=yes
                        fi
                    fi
                else
                    if ! test x${FOUND_MYSQL} = "xyes"; then
                        echo "no joy in /usr/local/mysql..."
                    fi
                fi
                if test -d "/var/mysql"; then
                    echo "Found directory /var/mysql"
                    echo "checking MySQL installation..."
                    mysql_dir=/var/mysql
                    echo -n "checking headers..."
                    if test -d "${mysql_dir}/include"; then
                        MYSQL_INCLUDE="-I${mysql_dir}/include"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    echo -n "checking libraries..."
                    if test -d "${mysql_dir}/lib"; then
                        if test -d "${mysql_dir}/lib/mysql"; then
                            MYSQL_LIB="-L${mysql_dir}/lib/mysql"
                        else
                            MYSQL_LIB="-L${mysql_dir}/lib"
                        fi
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    echo -n "checking binaries..."
                    if test -d "${mysql_dir}/bin"; then
                        MYSQL_BIN="${mysql_dir}/bin"
                        echo " ok"
                    else
                        echo " uh-oh"
                    fi
                    if test -f "${mysql_dir}/include/mysql.h"; then
                        MYSQL_HEADER="<mysql.h>"
                        AC_SUBST(MYSQL_HEADER)
                        AC_DEFINE(USE_MYSQL)
                        AC_SUBST(MYSQL_INCLUDE)
                        AC_SUBST(MYSQL_LIB)
                        AC_SUBST(MYSQL_BIN)
                        mysql_app=${MYSQL_BIN}/mysql
                        FOUND_MYSQL=yes
                    else
                        if test -f "${mysql_dir}/include/mysql/mysql.h"; then
                            MYSQL_HEADER="<mysql/mysql.h>"
                            AC_SUBST(MYSQL_HEADER)
                            AC_DEFINE(USE_MYSQL)
                            AC_SUBST(MYSQL_INCLUDE)
                            AC_SUBST(MYSQL_LIB)
                            AC_SUBST(MYSQL_BIN)
                            mysql_app=${MYSQL_BIN}/mysql
                            FOUND_MYSQL=yes
                        fi
                    fi
                else
                    if ! test x${FOUND_MYSQL} = "xyes"; then
                        echo "no joy in /var/mysql..."
                    fi
                fi


                if ! test x${FOUND_MYSQL} = "xyes"; then
                    dnl REALLY can't find MySQL anywhere!
                    echo
                    echo "ARGH: Unable to locate mysql! Take cover! Self destructing in 3 seconds!"
                    echo
                    echo "Please install the MySQL database system, which is available for free from"
                    echo "http://www.mysql.org/ and run this program again. If you do have MySQL in-"
                    echo "stalled, use the option --with-mysql=DIR so that $0 can find it."
                    echo
                    exit 1
                fi
dnl ##
dnl ##

            else
                echo
                echo "ARGH: Unable to locate mysql! Take cover! Self destructing in 3 seconds!"
                echo
                echo "Please install the MySQL database system, which is available for free from"
                echo "http://www.mysql.org/ and run this program again. If you do have MySQL in-"
                echo "stalled, use the option --with-mysql=DIR so that $0 can find it."
                echo
                exit 1
            fi
        else
            MYSQL_HEADER="<mysql/mysql.h>"
            AC_DEFINE(USE_MYSQL)
            AC_SUBST(MYSQL_HEADER)
            AC_CHECK_LIB(mysqlclient, mysql_connect)
        fi
    else
        MYSQL_HEADER="<mysql.h>"
        AC_DEFINE(USE_MYSQL)
        AC_SUBST(MYSQL_HEADER)
        AC_CHECK_LIB(mysqlclient, mysql_connect)
    fi
    mysql_app=mysql
    FOUND_MYSQL=yes
fi

dnl Additional MySQL options.
dnl

if test "x${with_sql_pass}" = "x"; then
    with_sql_pass="NULL"
fi
MYSQL_SERVER=${with_sql_host}
MYSQL_USER=${with_sql_user}
MYSQL_PASS=${with_sql_pass}
MYSQL_DATABASE=${with_sql_db}
MYSQL_SOCKET=${with_sql_sock}

dnl Echo to user.
dnl
if test ! x${with_mysql} = x && test -d "${with_mysql}"; then
    echo "using mysql server: ${with_sql_host}"
    echo "using mysql user: ${with_sql_user}"
    echo "using mysql password: ${with_sql_pass}"
    echo "using mysql database: ${with_sql_db}"
    echo "using mysql socket file: ${with_sql_sock}"
else
    echo
    echo "  using mysql server: ${with_sql_host}"
    echo "  using mysql user: ${with_sql_user}"
    echo "  using mysql password: ${with_sql_pass}"
    echo "  using mysql database: ${with_sql_db}"
    echo "  using mysql socket file: ${with_sql_sock}"
    echo
fi

dnl Define properly.
dnl
AC_SUBST(MYSQL_SERVER)
AC_SUBST(MYSQL_USER)
AC_SUBST(MYSQL_PASS)
AC_SUBST(MYSQL_DATABASE)
AC_SUBST(MYSQL_SOCKET)

dnl Use message rating system?
dnl
echo -n "checking whether to enable ratings..."
if test "x$with_rating" = "xyes"; then
  echo " yes"
  AC_DEFINE(USE_RATING, [], [Ratings])
else
  echo " no"
fi

dnl Use superhero generator?
echo -n "checking superhero powers..."
if test "x$with_hero" = "xyes"; then
  AC_DEFINE(SUPERHERO, [], [Masters of the Universe])
  echo " found in /dev/he-man"
else
  echo " need more spinach (sorry)"
fi

dnl Define LINUX if this is a linux system.
dnl fixme

AC_CONFIG_FILES([Makefile
                 daemons/Makefile
                 doc/Makefile
                 doc/sql/Makefile
                 include/Makefile
		 include/build-defs.h
                 lib/Makefile
                 misc/Makefile
		 po/Makefile.in
                 share/Makefile
                 share/etc/Makefile
                 share/feelings/Makefile
                 share/loginscreens/Makefile
                 shix/Makefile
                 src/Makefile
                 web/Makefile
                 web/classes/Makefile
                 web/engine/Makefile
                 web/flash/Makefile
                 web/pix/Makefile
                 web/script/Makefile
                 web/sound/Makefile
                 web/style/Makefile])
AC_OUTPUT

dnl Create PHP include file with MYSQL settings.
dnl
PHP_CONFIG_FILE=web/config.inc.phtml
echo "creating $PHP_CONFIG_FILE"
echo "<?php" > $PHP_CONFIG_FILE
echo >> $PHP_CONFIG_FILE
echo "/* config.inc.phtml  Generated automatically by configure.  */" >> $PHP_CONFIG_FILE
echo >> $PHP_CONFIG_FILE
echo "\$BBSNAME        = \"$with_name\";" >> $PHP_CONFIG_FILE
echo >> $PHP_CONFIG_FILE
echo "\$MYSQL_SERVER   = \"$MYSQL_SERVER\";" >> $PHP_CONFIG_FILE
echo "\$MYSQL_USER     = \"$MYSQL_USER\";" >> $PHP_CONFIG_FILE
echo "\$MYSQL_PASS     = \"$MYSQL_PASS\";" >> $PHP_CONFIG_FILE
echo "\$MYSQL_DATABASE = \"$MYSQL_DATABASE\";" >> $PHP_CONFIG_FILE
echo >> $PHP_CONFIG_FILE
echo "?>" >> $PHP_CONFIG_FILE

dnl Only do this if we're not called from the makefile.
dnl
if test "$no_create" != "yes" ; then


  dnl Update or create version stamp, but only if it' not automagically running.
  /bin/bash ./mkversion-sh

  dnl Linux newbie stuff.
  dnl
  if test "x$with_overview" = "xyes"; then
    dnl Give users a quick overview.
    echo
    echo -n "Please hit return to continue..."
    read ans
    clear
    
    echo "----------------------------------------------------------------------"
    echo "       You have set up $with_name BBS with the following features:"
    echo "----------------------------------------------------------------------"
    echo
    echo "  * MySQL is installed and will be used as follows:"
    echo
    echo "    The BBS will connect to database \"${with_sql_db}\" on server ${with_sql_host}"
    echo "    as user ${with_sql_user} and password ${with_sql_pass} using ${with_sql_sock}"
    echo
    if test "x$with_rating" = "xyes"; then
      echo "  * Rating system is enabled."
    else
      echo "  * Rating system is disabled."
    fi
    if test "x$with_hero" = "xyes"; then
      echo "  * Superheroes can be generated."
    else
      echo "  * Superheroes can not be generated."
    fi
    if test "x$os" = "xlinux" ; then
      echo "  * Extended system info is available."
    else
      echo "  * Extended system info is not available."
    fi
  fi
  echo
  if test "x$with_overview" = "xno"; then
    echo "----------------------------------------------------------------------"
  fi
  echo "Just run make and sit back whilst $with_name BBS is compiled."
  echo "After compilation is finished, refer to the README file for details"
  echo "on how to install the BBS on your machine. Note that you will need"
  echo "root access to do this."
  echo "----------------------------------------------------------------------"
  echo
fi

